--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -95,19 +95,19 @@
       </mediaobject>
     </screenshot>
 
-    <para>On the right you can see a topographical map of our beautiful home planet. To allow for better orientation the map offers a scale bar in the lower left corner as well as a windrose on the top right. To navigate and to control the view you can use the tools on the <guilabel>Navigation</guilabel> info box at the right: Press the arrow buttons to rotate the globe. The <guilabel>Up</guilabel> and <guilabel>Down</guilabel> arrow buttons will tilt the earth axis back and forth. The <guilabel>Left</guilabel> and <guilabel>Right</guilabel> arrow buttons will make the earth spin around its physical axis.
+    <para>On the right you can see a topographical map of our beautiful home planet. To allow for better orientation the map offers a scale bar in the lower left corner as well as a windrose on the top right. To navigate and to control the view you can use the tools on the <guilabel>Navigation</guilabel> info box at the right: Press the arrow buttons to rotate the globe. The <guibutton>Up</guibutton> and <guibutton>Down</guibutton> arrow buttons will tilt the earth axis back and forth. The <guibutton>Left</guibutton> and <guibutton>Right</guibutton> arrow buttons will make the earth spin around its physical axis.
     </para>
 
     <para>You can accomplish the same behavior by pressing the &LMB; somewhere on the globe and by moving the mouse while keeping the &LMB; pressed. Using this drag and drop style navigation will allow you to adjust the viewing angle much easier and more precisely. The cursor keys on your keyboard offer another alternative way to quickly change directions.
     </para>
 
-    <para>Zoom in and out by moving the vertical slider up and down. If your mouse has got a mouse wheel you can use that one instead - or you just hold the &LMB; and the &RMB; down both at once while moving the mouse up and down. Changing the zoom level step by step can be done via the <guilabel>Zoom In</guilabel> and <guilabel>Zoom Out</guilabel> buttons which are placed above and below the zoom slider (or using the <keycap>+</keycap> and <keycap>-</keycap> keys on your keyboard).
+    <para>Zoom in and out by moving the vertical slider up and down. If your mouse has got a mouse wheel you can use that one instead - or you just hold the &LMB; and the &RMB; down both at once while moving the mouse up and down. Changing the zoom level step by step can be done via the <guibutton>Zoom In</guibutton> and <guibutton>Zoom Out</guibutton> buttons which are placed above and below the zoom slider (or using the <keycap>+</keycap> and <keycap>-</keycap> keys on your keyboard).
     </para>
 
     <para>Depending on the map's resolution zooming in will provide you with more detail. Smaller cities will appear and using the topographic map you might notice that coastlines are provided as vector graphics.
     </para>
 
-    <para>In case you should get lost you can always reset the viewing angle and zoom level back to the point where we started off: Just hit the <guilabel>Home</guilabel> button (or the &Home; button on your keyboard). To set the home location to the current position (center of the map) click on the <menuchoice><guimenu>Bookmarks</guimenu> <guimenuitem>Set Home Location</guimenuitem></menuchoice> menu item.
+    <para>In case you should get lost you can always reset the viewing angle and zoom level back to the point where we started off: Just press the <guibutton>Home</guibutton> button (or the &Home; button on your keyboard). To set the home location to the current position (center of the map) select the <menuchoice><guimenu>Bookmarks</guimenu> <guimenuitem>Set Home Location</guimenuitem></menuchoice> menu item.
     </para>
 
     <para>A click onto the status bar using the &RMB; offers a menu which lets you customize the appearance of the status bar. You can show the position, altitude, the current tile level and a progress indicator that displays the status of the map data download.
@@ -217,13 +217,13 @@
   <chapter id="routing">
   <title>Find your way with &marble;</title>
 
-    <para>Besides searching for places, &marble; can display possible routes between two or more of them. Do you want to plan a bicycle tour in the nearby wood? Need driving instructions to get to an address in a foreign city? Click on the <guilabel>Routing</guilabel> tab on the top of &marble;'s toolbox to start planning your trip.
+    <para>Besides searching for places, &marble; can display possible routes between two or more of them. Do you want to plan a bicycle tour in the nearby wood? Need driving instructions to get to an address in a foreign city? Select the <guilabel>Routing</guilabel> tab on the top of &marble;'s toolbox to start planning your trip.
     </para>
 
     <sect1 id="routing-route-new">
     <title>Creating a new Route</title>
 
-      <para>In the <guilabel>Routing</guilabel> tab you'll see two green buttons <guilabel>A</guilabel> and <guilabel>B</guilabel>. Enter the start address in the input field next to the <guilabel>A</guilabel> button, the route start input field. Press &Enter; or click on the <guilabel>Search</guilabel> button to find matching placemarks. A small progress animation will shorten your waiting time while the search is running. Using the search term <quote>Weavers Lane, London</quote>, the result will look similar to the screenshot below:
+      <para>In the <guilabel>Routing</guilabel> tab you'll see two green icons <guibutton>A</guibutton> and <guibutton>B</guibutton>. Enter the start address in the input field next to the <guibutton>A</guibutton> button, the route start input field. Press &Enter; or press the <guibutton>Search</guibutton> button to find matching placemarks. A small progress animation will shorten your waiting time while the search is running. Using the search term <quote>Weavers Lane, London</quote>, the result will look similar to the screenshot below:
       </para>
 
       <screenshot>
@@ -234,13 +234,13 @@
         </mediaobject>
       </screenshot>
 
-      <para>Matching placemarks line up in the list below the input fields. They are also shown in the map. The first result is automatically selected as the route start. In the map, this position is indicated using the same <guilabel>A</guilabel> icon as the button next to the route start input field. If the first result is not your desired route start, click on any other result to make that the new start position. You can either click on it in the result list or on its icon in the map to achieve that. The currently chosen route start is always indicated using the <guilabel>A</guilabel> icon.
+      <para>Matching placemarks line up in the list below the input fields. They are also shown in the map. The first result is automatically selected as the route start. In the map, this position is indicated using the same <guiicon>A</guiicon> icon as the button next to the route start input field. If the first result is not your desired route start, click on any other result to make that the new start position. You can either click on it in the result list or on its icon in the map to achieve that. The currently chosen route start is always indicated using the <guiicon>A</guiicon> icon.
       </para>
 
-      <para>With the route start at hand, let's move on to enter the destination of our trip. The procedure is the same: Enter the destination address in the input field next to the <guilabel>B</guilabel> button, press &Enter; and select the desired item among the result list.
+      <para>With the route start at hand, let's move on to enter the destination of our trip. The procedure is the same: Enter the destination address in the input field next to the <guibutton>B</guibutton> button, press &Enter; and select the desired item among the result list.
       </para>
 
-      <para>Did you notice that the <guilabel>Search</guilabel> button is now gone and replaced by a <guilabel>Get Directions</guilabel> button? &marble; is signalizing that all information needed to calculate a route has been entered correctly. Click on the <guilabel>Get Directions</guilabel> button to retrieve a suitable route now. If your destination search term is <quote>Sun Walk, London</quote>, the result will resemble this screenshot:
+      <para>Did you notice that the <guilabel>Search</guilabel> button is now gone and replaced by a <guilabel>Get Directions</guilabel> button? &marble; is signalizing that all information needed to calculate a route has been entered correctly. Press the <guilabel>Get Directions</guilabel> button to retrieve a suitable route now. If your destination search term is <quote>Sun Walk, London</quote>, the result will resemble this screenshot:
       </para>
 
       <screenshot>
@@ -251,7 +251,7 @@
         </mediaobject>
       </screenshot>
 
-      <para>If the start (or destination) position is already visible on the screen, you may find it more convenient to select it directly in the map. To do that, click on the <guilabel>A</guilabel> (or <guilabel>B</guilabel>) button next to the input field. Select <guilabel>From Map</guilabel> in the upcoming menu. Once clicked, the map input mode is activated: The next click on a position in the map will become the start (or end) of your trip. The mouse cursor turns into a cross to ease an accurate selection. The selected position will be included in the route and marked in the map. To abort the selection, either click on the button again or press &Esc;.
+      <para>If the start (or destination) position is already visible on the screen, you may find it more convenient to select it directly in the map. To do that, press the <guibutton>A</guibutton> (or <guibutton>B</guibutton>) button next to the input field. Select <guilabel>From Map</guilabel> in the upcoming menu. Once pressed, the map input mode is activated: The next click on a position in the map will become the start (or end) of your trip. The mouse cursor turns into a cross to ease an accurate selection. The selected position will be included in the route and marked in the map. To abort the selection, either press the button again or press &Esc;.
       </para>
 
       <para>An alternative selection of the route start and destination is provided via the context menu of the map: Click with the &RMB; on the desired location and select <guilabel>Directions from here</guilabel> or <guilabel>Directions to here</guilabel>, respectively.
@@ -345,14 +345,14 @@
       <para>Existing via points can be moved freely across the map. Move the mouse pointer above a via point and drag it to its new location. Once released, the route will be updated automatically.
       </para>
 
-      <para>To exclude via points from the route, remove them. This can be done using either the <guilabel>Remove</guilabel> button next to the via point input field or by clicking with the &RMB; on the via point in the map. In the context menu, choose <guimenuitem>Remove this Destination</guimenuitem>. To start an entirely new route, remove all via points.
+      <para>To exclude via points from the route, remove them. This can be done using either the <guibutton>Remove</guibutton> button next to the via point input field or by clicking with the &RMB; on the via point in the map. In the context menu, choose <guimenuitem>Remove this Destination</guimenuitem>. To start an entirely new route, remove all via points.
       </para>
     </sect1>
 
     <sect1 id="routing-route-export">
     <title>Loading, Saving and Exporting Routes</title>
 
-      <para>You can save routes in <acronym>kml</acronym> (Keyhole Markup Language) format and load them again at a later point - on the same computer or a different device running &marble;, or share them with your friends or other applications which are able to read kml files (like <application>Google Earth</application>). To save a route to a <literal role="extension">.kml</literal> file, click on the <guilabel>Save</guilabel> icon on the bottom of the routing tab. The upcoming save dialog allows you to choose a file name to save the route to. Similarly loading a route is initiated with the <guilabel>Open</guilabel> icon on the bottom of the routing tab. Select the <literal role="extension">.kml</literal> route file to open in the upcoming open dialog and &marble; loads the route from it.
+      <para>You can save routes in <acronym>kml</acronym> (Keyhole Markup Language) format and load them again at a later point - on the same computer or a different device running &marble;, or share them with your friends or other applications which are able to read kml files (like <application>Google Earth</application>). To save a route to a <literal role="extension">.kml</literal> file, press the <guibutton>Save</guibutton> button on the bottom of the routing tab. The upcoming save dialog allows you to choose a file name to save the route to. Similarly loading a route is initiated with the <guibutton>Open</guibutton> button on the bottom of the routing tab. Select the <literal role="extension">.kml</literal> route file to open in the upcoming open dialog and &marble; loads the route from it.
       </para>
 
       <para>Routes planned in &marble; can be used in other applications or navigation devices which support <acronym>gpx</acronym> (GPS eXchange Format) or equivalent formats. If your navigation device does not support <acronym>gpx</acronym> directly, you can use a conversion utility like <command>gpsbabel</command> to convert a <acronym>gpx</acronym> file exported by &marble; to a suitable format. The export of a route in &marble; is initiated from the routing context menu in the map. Click with the &RMB; on any point of the route in the map. In the context menu that appears, choose <guimenuitem>Export Route...</guimenuitem>:
@@ -469,10 +469,10 @@
       <para>Press the <guibutton>Open...</guibutton> button to choose the name and destination folder of the movie. Also you can change the frames per second (FPS) of the movie between 1 and 60.
       </para>
 
-      <para>When all is set, you can start recording. To start, click the <guibutton>Start</guibutton> button. Once this is done you can zoom and pan around and &marble; will capture a video of your journey across the globe.
+      <para>When all is set, you can start recording. To start, press the <guibutton>Start</guibutton> button. Once this is done you can zoom and pan around and &marble; will capture a video of your journey across the globe.
       </para>
 
-      <para>To stop recording of the movie and save it, click the <menuchoice><guimenu>Edit</guimenu> <guimenuitem>Stop Recording</guimenuitem></menuchoice> menu item.
+      <para>To stop recording of the movie and save it, select the <menuchoice><guimenu>Edit</guimenu> <guimenuitem>Stop Recording</guimenuitem></menuchoice> menu item.
       </para>
 
       <sect2 id="recording-movie-troubleshooting">
@@ -704,7 +704,7 @@
             <term><menuchoice>
             <guimenu>View</guimenu>
             <guimenuitem>Browse Eclipses...</guimenuitem></menuchoice></term>
-            <listitem><para><action>Displays</action> the <guilabel>Eclipse Browser</guilabel> dialog where you can set the year to show eclipses for, open plugin settings dialog, view data on eclipse start, end, type and magnitude. Choose some eclipse item from the list and click on <guibutton>Go To Selected Eclipse</guibutton> to view the location of the eclipse on the globe.</para>
+            <listitem><para><action>Displays</action> the <guilabel>Eclipse Browser</guilabel> dialog where you can set the year to show eclipses for, open plugin settings dialog, view data on eclipse start, end, type and magnitude. Choose some eclipse item from the list and press the <guibutton>Go To Selected Eclipse</guibutton> to view the location of the eclipse on the globe.</para>
 
             <para>This menu item will be shown only when <link linkend="eclipsesplugin">Eclipses</link> plugin is enabled.</para></listitem>
           </varlistentry>
@@ -970,7 +970,7 @@
       <variablelist>
         <varlistentry>
           <term><guilabel>Enable synchronization</guilabel></term>
-          <listitem><para>The synchronization can be enabled or disabled using this item. When the synchronization is enabled you can choose whether to synchronize route and bookmark data using the corresponding check boxes or click on <guibutton>Sync now</guibutton> to initiate synchronization immediately.</para></listitem>
+          <listitem><para>The synchronization can be enabled or disabled using this item. When the synchronization is enabled you can choose whether to synchronize route and bookmark data using the corresponding check boxes or press the <guibutton>Sync now</guibutton> button to initiate synchronization immediately.</para></listitem>
         </varlistentry>
 
         <varlistentry>
@@ -998,22 +998,22 @@
         </varlistentry>
 
         <varlistentry>
-          <term><guilabel>Configure...</guilabel></term>
+          <term><guibutton>Configure...</guibutton></term>
           <listitem><para>Opens a window where the currently selected routing profile can be configured.</para></listitem>
         </varlistentry>
 
         <varlistentry>
-          <term><guilabel>Remove</guilabel></term>
+          <term><guibutton>Remove</guibutton></term>
           <listitem><para>Deletes the selected routing profile.</para></listitem>
         </varlistentry>
 
         <varlistentry>
-          <term><guilabel>Move Up</guilabel></term>
+          <term><guibutton>Move Up</guibutton></term>
           <listitem><para>The selected routing profile is moved up one step. It will appear before the one that was previously on top of it.</para></listitem>
         </varlistentry>
 
         <varlistentry>
-          <term><guilabel>Move Down</guilabel></term>
+          <term><guibutton>Move Down</guibutton></term>
           <listitem><para>The selected routing profile is moved down one step. It will appear after the one that was previously below of it.</para></listitem>
         </varlistentry>
       </variablelist>
