More documentation improves
* Global menu item fixed again
* Fix a item reference
* Renew some screenshots

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -85,7 +85,7 @@
   <chapter id="quick-start">
   <title>&marble; quick start guide: Navigation</title>
 
-    <para>Here is &marble; the first time you run it, either with <menuchoice><guimenu>Education</guimenu> <guimenuitem>&kde; &marble; (Virtual Globe)</guimenuitem></menuchoice> from the global menu or with <keycombo action="simul">&Alt;<keycap>F2</keycap></keycombo> and entering <command>marble</command> into the field.</para>
+  <para>Here is &marble; the first time you run it, either with <menuchoice><guimenu>Applications<guimenu> <guisubmenu>Education</guisubmenu> <guimenuitem>&kde; &marble; (Virtual Globe)</guimenuitem></menuchoice> from the global menu or with <keycombo action="simul">&Alt;<keycap>F2</keycap></keycombo> and entering <command>marble</command> into the input field.</para>
 
     <screenshot>
       <screeninfo>&marble; main window</screeninfo>
@@ -783,7 +783,7 @@
             <term><menuchoice>
             <guimenu>Settings</guimenu>
             <guisubmenu>View Size</guisubmenu></menuchoice></term>
-            <listitem><para><action>Switches between various sizes of &marble; map area.</action> You can choose one of the sizes that are suitable for capturing frames for screencast or keep &marble; map area resizable (<guimenuitem>Default (resizable)</guimenuitem> menu item).</para></listitem>
+            <listitem><para><action>Switches between various sizes of &marble; map area.</action> You can choose one of the sizes that are suitable for capturing frames for screencast or keep &marble; map area resizable (<guimenuitem>Default (resizable)</guimenuitem> item).</para></listitem>
           </varlistentry>
 
           <varlistentry>
